--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -2,6 +2,6 @@ option_settings:
         aws:elasticbeanstalk:application:environment:
                 DJANGO_SETTINGS_MODULE: bloodbank.settings
         aws:elasticbeanstalk:container:python:
-                WSGIPath:bloodbank.wsgi:application
+                WSGIPath:Bloodbank.wsgi:application
         aws:elasticbeanstalk:environment:proxy:staticfiles:
                 /static: static
