--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,6 +1,6 @@
 option_settings:
         aws:elasticbeanstalk:application:environment:
-                DJANGO_SETTINGS_MODULE: bloodbank.settings
+                DJANGO_SETTINGS_MODULE: Bloodbank.settings
         aws:elasticbeanstalk:container:python:
                 WSGIPath:Bloodbank.wsgi:application
         aws:elasticbeanstalk:environment:proxy:staticfiles:
