--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,7 +1,7 @@
 option_settings:
         aws:elasticbeanstalk:application:environment:
-                DJANGO_SETTINGS_MODULE: Bloodbank.settings
+                DJANGO_SETTINGS_MODULE:bloodbank.settings
         aws:elasticbeanstalk:container:python:
-                WSGIPath:Bloodbank.wsgi:application
+                WSGIPath:bloodbank.wsgi:application
         aws:elasticbeanstalk:environment:proxy:staticfiles:
                 /static: static
